# ocean_optics

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml  try-usb2000+.py  try-usb2000.py
src/ocean_optics/: __init__.py  __main__.py  cli.py  gui.py  main_window.ui  spectroscopy.py  try-usb2000+.py  try-usb2000.py  try_usb2000+.py  ui_main_window.py  usb2000+.py  usb2000plus.py
