[project]
name = "ocean-optics"
version = "0.1.0"
description = "Spectrosopy software using an Ocean Optics 2000(+) spectrometer."
readme = "README.md"
authors = [{ name = "David Fokkema", email = "davidfokkema@icloud.com" }]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.1",
    "plotext>=5.3.2",
    "pyusb>=1.3.1",
    "rich>=13.9.4",
    "typer>=0.15.1",
]

[project.scripts]
ocean-optics = "ocean_optics:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
