[project]
name = "ocean-optics"
version = "0.1.0"
description = "Spectrosopy software using an Ocean Optics 2000(+) spectrometer."
readme = "README.md"
authors = [{ name = "David Fokkema", email = "davidfokkema@icloud.com" }]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "plotext>=5.3.2",
    "pyqtgraph>=0.13.7",
    "pyside6-essentials>=6.8.1.1",
    "pyusb>=1.3.1",
    "rich>=13.9.4",
    "typer>=0.15.1",
]

[project.scripts]
ocean-optics = "ocean_optics.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "rust-just>=1.38.0",
]
